--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Patua+One&display=swap"
       rel="stylesheet"
     />
 
