--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,user-scalable=no,maximum-scale=1.0"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -47,7 +50,7 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
 
-    <title>React App</title>
+    <title>Meal Planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
